2008-02-25  Shai Ayal  <shaiay@users.sourceforge.net>

	* fltk_backend/fltk_backend.cc (class plot_window): Many changes
	to use figure::properties instead of figure handle to reference
	the figure
	(class figure_manager): ditto
	(__fltk_redraw__): moved most of functionality into the
	figure_manager class
	(plot_window::pixel2pos): Modified to use axes::pixel2coord
	(plot_window::pixel2staus): Modified to use pixel2pos
	(plot_window::handle): Added zoom with mouse 

2008-02-24  Shai Ayal  <shaiay@users.sourceforge.net>

	* fltk_backend/fltk_backend.cc (OpenGL_fltk::Draw): removed double
	buffer switch
	(OpenGL_fltk::setup_viewport): removed call to glOrtho --
	gl-render takes care of all the transformations

2008-02-23  Shai Ayal  <shaiay@users.sourceforge.net>

	* fltk_backend/fltk_backend.cc (plot_window::mark_modifed): mark
	the whole window as damaged (otherwise changing figure.postion
	does not have immediate effect)
	(plot_window::draw): New function, checks for window size 
	(__fltk_maxtime__): New DEFUN to allow tweaking of fltk timeout
	(__fltk_redraw__): Use fltk_maxtime as timeout

2008-02-21  Michael Goffioul  <michael.goffioul@gmail.com>

	* opengl/gl-render.cc (opengl_renderer::patch_tesselator::combine):
	Protect against NULL vertex data.

	* opengl/gl-render.cc (opengl_renderer::draw(patch)): Add marker
	rendering of patch objects.

2008-02-21  Shai Ayal  <shaiay@users.sourceforge.net>

	* opengl/gl-render.cc: remove OpenGL includes
	* opengl/gl-render.h: add OpenGL includes
	* fltk_backend/fltk_backend.cc: remove OpenGL includes
	(__fltk_redraw__): put figure handle into the figure's
	__plot_stream__ property for later
	(fltk_backend::close_figure): use argument as figure handle to
	close

2008-02-20  Shai Ayal  <shaiay@users.sourceforge.net>

	* fltk_backend/Makefile.in: initial import

	* fltk_backend/fltk_backend.cc: initial import
	

2008-02-20  Michael Goffioul  <michael.goffioul@gmail.com>
